Bug 17177 - Some garbage drawn in a rectangle
Summary: Some garbage drawn in a rectangle
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: 1.6.4
Hardware: Other All
: medium normal
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-17 18:19 UTC by Yevgen Muntyan
Modified: 2008-09-24 10:53 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screenshot (6.84 KB, image/png)
2008-08-17 18:19 UTC, Yevgen Muntyan
Details
test case (1.20 KB, text/plain)
2008-08-17 18:20 UTC, Yevgen Muntyan
Details

Description Yevgen Muntyan 2008-08-17 18:19:09 UTC
Created attachment 18331 [details]
screenshot

See the test case and screenshot. Somehow if I draw a filled rectangle and a border around it, a diagonal line appears in that rectangle. But it happens only with certain rectangle sizes and if the left and bottom borders are outside of the window (the test case does it right).
Comment 1 Yevgen Muntyan 2008-08-17 18:20:11 UTC
Created attachment 18332 [details]
test case

Compile with gcc `pkg-config --cflags --libs gtk+-2.0`
Comment 2 Chris Wilson 2008-09-24 10:53:04 UTC
I've pushed a fix in commit 444d44acde4ac73641c789c19ec7a3199211b594, which will be wrapped up in the forthcoming 1.8 release.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.